--- a/style.css
+++ b/style.css
@@ -103,12 +103,11 @@ textarea{
 
 .saveBtn>.fas{
   color: var(--color-five);
-  text-align: left;
 }
 
 .saveBtn i:hover {
   font-size: 20px;
-  transition: all .3s ease-in-out;
+  transition: all .3s ease-in;
 }
 
 #plannerblock {
